Fix: img clipping on animation

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,9 +34,7 @@
     position: relative;
     top: -20px;
 }
-.collapsing {
-    display: none !important;
-}
+
 
 
 
